# threat-hunting-games

./: .gitignore  Dockerfile  README.md  Test_API_Requests.py  build_containers.sh  build_docker_container.sh  build_docker_containers.sh  build_environment.sh  docker-compose.vpn.yml  docker-compose.yml  examples.xlsx  matrix_interpretation.md  pyproject.toml  run_unit_tests_container.sh  stop_containers.sh
Containers/: .dockerignore  Create_GHOSTS_Env.py  Dockerfile  compose.vpn.yaml  compose.yaml  docker-compose.vpn.yml  docker-compose.yml  dockerfile
Containers/GHOSTS-SPECTRE/src/: docker-compose.yml
Containers/GHOSTS/src/: dockerfile
Docker_Container/: Create_GHOSTS_Env.py  Dockerfile  Test_API_Requests.py  docker-compose.vpn.yml  docker-compose.yml
GHOSTS-SPECTRE/src/: appsettings.json  dockerfile
GHOSTS/src/Ghosts.Api/: docker-compose.yml
GHOSTSConnection/: Attacker_Actions.json  Defender_Actions.json  __init__.py
tests/: code_quality_script.sh  conftest.py  ghosts_connection_test.py  test_threat_hunting_games.py  test_v0.py  test_v1.py  test_v3.py
threat_hunting_games/: gameload.py  mcts.py  mcts.v1.py  parsers.py  playthrough.py  playthroughs.py  states.py  v0.py  v1.py  v2.py  v2_matrix.py  v2_seq.py  v2_tensormod.py
threat_hunting_games/algorithms/: README.md  best_response.py  exploitability.py  fictitious_play.py  generate_playthrough.py  get_all_states.py  mcts.py
threat_hunting_games/algos/: mcts.py  v0.py
threat_hunting_games/examples/: README.md  alpha_zero.py  benchmark_games.py  cfr_cpp_example.py  cfr_example.py  deep_cfr.py  deep_cfr_jax.py  deep_cfr_pytorch.py  deep_cfr_tf2.py  discounted_cfr.py  eva.py  example.py  exploitability_descent.py  fictitious_play_example.py  gambit_example.py  get_all_states.py  independent_tabular_qlearning.py  is_mcts_exploitability.py  jpsro.py  lp_solve_example.py  marl_nashq_example.py  matrix_game_example.py  matrix_nash_example.py  mccfr_cpp_example.py  mccfr_example.py  mcts.py  mmd_example.py  mmd_matrix_example.py  mmd_nash_example.py  neurd_example.py  nfg_writer_example.py  play_scenarios.py  playthrough.py  policy_aggregator_example.py  psro_v2_example.py  query_example.py  rcfr_example.py  response_graph_ucb_2x2_game.py  response_graph_ucb_sample_complexity.py  rl_environment.py  (+6 more)
threat_hunting_games/examples/problematic/: play_scenarios.py
threat_hunting_games/games/: __init__.py  arena_v2.py  v2.py  v2_matrix.py  v2_seq.py  v2_tensormod.py
threat_hunting_games/games/v0/: v0.py
threat_hunting_games/games/v2/: arena_v2.py  v2.py  v2_matrix.py  v2_seq.py  v2_tensormod.py
threat_hunting_games/games/v3/: arena_v3.py  arena_zsum_v3.py  v3_lb_seq_cnst.py  v3_lb_seq_zsum.py  v3_lockbit_seq.py
threat_hunting_games/games/v4_policy/: README.md  arena_v4.py  arena_zsum_v4.py  bot_agent.py  bot_playthrough.py  rl_train.py  (+4 more)
threat_hunting_games/tools/: export_game_params.py  group_summary.py  import_game_params.py  parsers.py  states.py
threat_hunting_games/viz/: README.md  treeviz.py  tv0.py  tv1.py  tv2.py  v1.py
(+58 files in other folders)
