[tool.poetry]
name = "threat-hunting-games"
version = "0.1.0"
description = ""
authors = ["Phil Groce <pgroce@cert.org>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
