# Poetry and other core configuration
[tool.poetry]
name = "threat-hunting-games"
version = "0.1.0"
description = ""
authors = ["Phil Groce <pgroce@cert.org>"]
# packages = [
#          {include = "threathunt"}
# ]

[tool.poetry.dependencies]
python = "~3.10"
open-spiel = "^1.2"
numpy = "^1.23.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.4"
pylint-pytest = "^1.1.2"
jedi = "^0.18.1"
mypy = "^0.961"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# If the package installs any executables, list the script package and
# entry point here.
# [tool.poetry.scripts]
# foo = "threathunt.scripts.foo:run_main"


# Tool configurations

# Black: https://pypi.org/project/black/
[tool.black]
line-length=88

# Pylint: https://pypi.org/project/pylint/
[tool.pylint.main]
load-plugins = ["pylint_pytest"]
extension-pkg-allow-list=["pyspiel"]

[tool.pylint.format]
max-line-length = 88


# pytest: https://docs.pytest.org/en/7.1.x/
[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"

[application.config]
unix-sim-path = "./Simulations"
windows-sim-path = ".\\Simuations"
unix-ghosts-path = "../Containers/Logs"
windows-ghosts-path = "..\\Containers\\Logs"
local-ghosts-uri = "localhost:8080"
prod-ghosts-uri = "ghosts-api:5000"



